Framing chapter 3 better via new overview section, changes to intro/conclusion, etc.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -14,6 +14,18 @@ This chapter recounts the development of the Virtual Time Window, a platform tha
 
 %=========================================================================================================
 
+\section{Overview}
+
+The Virtual Time Window (VTW) was a preliminary investigation into the application of parallel reality to virtual heritage, that leveraged the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions.
+
+The challenge was not only to create a platform that explored the plausibility of leveraging an existing modality of alternate reality interaction (Situated Simulations) for investigation into parallel reality experience in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages.
+
+%In the case of the OVW group's OpenSim content this approach also allows for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc., thanks to OpenSim's distributed multi-user framework that leverages Internet connectivity.
+
+The VTW investigation, as a first foray into the creation of a parallel reality platform and its application to cultural heritage, directly informed the design and development of the subsequent Mirrorshades platform.
+
+%=========================================================================================================
+
 \section{Virtual Heritage}
 
 Alternate reality technologies have been used for over two decades~\cite{Roussou2002} to aid in the investigation, understanding and dissemination of information pertaining to our past in the fields of archaeology and cultural heritage. Whilst archaeology studies human activity through the recovery of remains, heritage is concerned also with intangible attributes of society; tradition, art, narratives and other cultural evidences~\cite{Roussou2002}. \textit{Virtual heritage} is the name given to the application of advanced imaging techniques, including alternate realities, to the synthesis, conservation, reproduction, representation, reprocessing and display of this cultural evidence~\cite{roussou:photorealism}.
@@ -191,8 +203,6 @@ Although parallel reality as a concept is less critical of accurate registration
 
 \section{The Virtual Time Window}
 \label{the-virtual-time-window}
-The Virtual Time Window (VTW) was a preliminary investigation into the application of parallel reality to virtual heritage, that leveraged the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform, leveraging the familiar modality of alternate reality interaction presented by existing sitsim implementations, that would allow investigation into the parallel reality concept in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach also allows for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc., thanks to OpenSim's distributed multi-user framework that leverages Internet connectivity.
-
 VTW is presented as a tablet computer which is capable of tracking its position via GPS, its compass heading (yaw) via magnetometer (`electronic compass') and its pitch via accelerometer. Previous augmented reality and sitsim applications have proven the suitability of smartphones and tablets for mobile, position and orientation aware scenarios that present virtual objects within a cultural heritage context. These devices are entering ubiquity today, presenting a platform that can be quickly assimilated by most users.
 
 The tablet employed by VTW runs a modified version of the Second Life client that accesses, via wifi, a virtual reconstruction of a cultural heritage site hosted by an OpenSim server. The Second Life client is controlled entirely by the tablet's position and orientation - the user does not manually control any aspect. The modality of interaction offered is similar to that of using a smartphone to take a photograph, but whereas the screen of the smartphone shows the real environment as it is, the screen of the VTW tablet shows the environment as it was in the past - a window to the past, or \textit{Virtual Time Window}. The user is free to explore the real cultural heritage site, observing it in its current state, whilst at any moment `looking through' VTW to see what a particular vantage looked like in the past. Figure \ref{vtw_high_level.png} provides a high level conceptual overview of the components of the platform.
@@ -662,7 +672,9 @@ VTW averaged framerates between 20 and 25 frames per second (fps) with the modif
 	\label{vtw-framerates.png}
 \end{figure}
 
-The style of explorative interaction with virtual content that the VTW platform employs is more resilient to lower frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including first person shooters [20], but overall user experience would nonetheless have been improved by a higher frame rate. It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW.
+Framerate has a readily apparent effect upon user satisfaction of graphical applications with higher framerates, and the smoother and more natural seeming motion that they result in, leading to higher satisfaction~\cite{Claypool2006a}. Framerate is often a trade off between the computational power of the available graphical hardware and the quality and complexity of the graphics desired. Assuming no change in software, an increase in graphical quality and complexity almost invariably requires an increase in the computational power of the graphical hardware in order to maintain a similar framerate, while sacrificing graphical quality and complexity will result in an increase in framerate upon the same graphical hardware. This trade off is often more apparent for applications destined for mobile devices than those for desktop devices, as the computational power of mobile graphical hardware is much more strictly limited by the size, weight, power consumption and heat dissipation limitations of mobile devices.
+
+The 20 to 25 fps that the VTW platform was able to achieve with the Second Life client's quality set to `Low' provided the best experience during testing. Whilst increasing the quality setting resulted in higher graphical quality and level of detail, the accompanying reduction in frame rate led to a worsened overall experience. The style of explorative interaction with virtual content that the VTW platform employs is more resilient to lower frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including first person shooters~\cite{Claypool2006}, but overall user experience would nonetheless have been improved by a higher frame rate. It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW.
 
 The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings were combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates.
 
@@ -706,6 +718,6 @@ Both with previous sitsim projects and VTW the user's view is arguably always a 
 
 \section{Summary}
 
-This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was a preliminary foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. VTW assessed via real world application the suitability of an interface in the style of previous sitsim projects to serve as a platform for investigation into parallel reality experience. This real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a level of freeform exploration wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the concept of parallel reality envisioned.
+This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was a preliminary foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. VTW assessed via real world application the suitability of an interface in the style of previous sitsim projects to serve as a platform for investigation into parallel reality experience. This real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a level of freeform exploration wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the concept of parallel reality envisioned. The lessons learned from the VTW project were used to inform the design and development of the subsequent Mirrorshades platform.
 
 %=========================================================================================================
