More chapter 3 corrections.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -332,7 +332,7 @@ In this manner the Arduino could marshal the values obtained from the HMC6343 in
   \label{arduino_joystick_for_second_life_3.jpg}
 \end{figure}
 
-Unfortunately this experiment revealed that the precision attainable through this approach was not sufficient for the style of control and interaction required for VTW. Specifically the Second Life client's joystick interface seemed to apply smoothing/damping to the joystick inputs, preventing reliable rotations or movements of specific values: sending a joystick command to rotate the camera by $x$\textdegree\ followed by a second command to rotate the camera by $-x$\textdegree\ did not reliably return the camera to its original orientation from before the application of the first rotation. As the required interaction was to map the \textit{absolute} orientation of the tablet to the Second Life camera, this discrepancy (which cannot be disabled from the Second Life client's joystick configuration) rendered the approach unworkable.
+Unfortunately this experiment revealed that the precision attainable through this approach was not sufficient for the style of control and interaction required for VTW. Specifically the Second Life client's joystick interface seemed to apply smoothing/damping to the joystick inputs, preventing reliable rotations or movements of specific values: sending a joystick command to rotate the camera by $x$\textdegree\ followed by a second command to rotate the camera by $-x$\textdegree\ did not reliably return the camera to its original orientation from before the application of the first rotation. As the required interaction was to map the \textit{absolute} orientation of the tablet to the Second Life camera, this discrepancy (which cannot be disabled from the Second Life client's joystick configuration) rendered the approach unworkable and it was instead necessary to effect modifications to the codebase of the Second Life client (see section \ref{modifying-second-life}).
 
 %=========================================================================================================
 
@@ -476,6 +476,7 @@ The implementation of the VTW position control as a region module is available o
 %=========================================================================================================
 
 \section{Modifying Second Life for Orientation and Position Control}
+\label{modifying-second-life}
 
 Due to the Second Life client's existing control interfaces not allowing enough control over camera orientation for VTW's requirements (section \ref{exploitJoystick}), it was necessary to modify the client's codebase to produce a bespoke client allowing complete control over orientation by magnetometer and accelerometer input. Although sufficient position control was obtained via an OpenSim region module (section \ref{regionModule}) it was deemed prudent to also encapsulate position control into the modified client. This not only allowed for finer grain control, but also removed the dependency upon the virtual reconstruction being hosted upon an OpenSim server; Second Life's own servers do not support extension via Region Modules. Thus the Second Life client was modified with the addition of the ability to:
 
@@ -674,9 +675,13 @@ VTW averaged framerates between 20 and 25 frames per second (fps) with the modif
 
 Framerate has a readily apparent effect upon user satisfaction of graphical applications with higher framerates, and the smoother and more natural seeming motion that they result in, leading to higher satisfaction~\cite{Claypool2006a}. Framerate is often a trade off between the computational power of the available graphical hardware and the quality and complexity of the graphics desired. Assuming no change in software, an increase in graphical quality and complexity almost invariably requires an increase in the computational power of the graphical hardware in order to maintain a similar framerate, while sacrificing graphical quality and complexity will result in an increase in framerate upon the same graphical hardware. This trade off is often more apparent for applications destined for mobile devices than those for desktop devices, as the computational power of mobile graphical hardware is much more strictly limited by the size, weight, power consumption and heat dissipation limitations of mobile devices.
 
-The 20 to 25 fps that the VTW platform was able to achieve with the Second Life client's quality set to `Low' provided the best experience during testing. Whilst increasing the quality setting resulted in higher graphical quality and level of detail, the accompanying reduction in frame rate led to a worsened overall experience. The style of explorative interaction with virtual content that the VTW platform employs is more resilient to lower frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including first person shooters~\cite{Claypool2006}, but overall user experience would nonetheless have been improved by a higher frame rate. It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW.
+The 20 to 25 fps that the VTW platform was able to achieve with the Second Life client's quality set to `Low' provided the best experience during testing. Whilst increasing the quality setting resulted in higher graphical quality and level of detail, the accompanying reduction in frame rate led to a worsened overall experience. The style of explorative interaction with virtual content that the VTW platform employs is more resilient to lower frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including first person shooters~\cite{Claypool2006}, but overall user experience would nonetheless have been improved by a higher frame rate.
 
-The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings were combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates.
+It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW. Indeed, the Second Life/OpenSim software ecosystem is an inherently desktop environment and making use of a software environment with support specifically for mobile deployment, such as Unity, would have allowed for higher framerates while matching or surpassing the graphical quality of the VTW platform, at the cost of a lengthy conversion process to move 3D assets from Second Life/OpenSim into this alternative environment. It is also worth noting that the graphical capabilities of both desktop and mobile devices are steadily increasing with every new hardware generation, with the 3D entertainment capabilities of mobile devices now representing an important factor in the buyer's decision making process.
+
+The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings were combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. This shortcoming is something that has already been addressed since VTW's development, by the introduction of commodity orientation sensors that sample at much higher rates and which have already begun to find their way into the realm of midrange smartphones and similar consumer electronic devices, in addition to more specialist items such as virtual reality HMDs.
+
+In summary, the negative effect upon user experience of low framerates, the restriction of graphical quality to those levels that allow for sufficient framerates to be produced, and the slow response of camera orientation to user movement throughout the VTW testing should be viewed as a limitation of the available technology rather than a limitation of the principal of parallel reality. Already since the development of VTW, we have seen the introduction of handheld devices with substantially greater graphical capabilities, additionally containing orientation sensors of equal or higher accuracy and that boast much higher sample rates. Exploiting these advances will allow for substantial increases to user satisfaction of parallel reality experiences, while making such experiences more accessible as the reliance upon supplementary supporting hardware to imbue a handheld device with the required positional and orientational sensing abilities becomes moot.
 
 %=========================================================================================================
 
@@ -693,6 +698,8 @@ Considering the second scenario of freeform exploration, this level of positiona
 \end{quote}
 
 Considering the third scenario with detailed comparison of objects and artefacts in close proximity is where the positional discrepancy of VTW and its tendency not to settle renders the experience unworkable. When walking from the cloisters through the real South wall into the cathedral nave, the virtual vantage would pass through the virtual South wall several metres to one side of the virtual doorway. Comparison between an object the size of a doorway from a distance of a few meters in the manner that scenario 3 envisages would be unworkable in this manner.
+
+In summary, the accuracy of GPS data experienced during VTW testing allowed for the first scenario of static viewpoints and for some aspect of the second scenario of freeform exploration. However for a parallel reality system to allow for the full experience of the second scenario, for any aspect of the third scenario and to operate at locations with more substantial obstructions to the sky (including indoors), a more accurate positioning system than GPS is required.
 
 %The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit from better graphical quality and higher responsiveness to changes in user orientation.
 
