Added table of influence factors to end of VTW chapter (3).

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -723,6 +723,53 @@ Both with previous sitsim projects and VTW the user's view is arguably always a 
 
 %=========================================================================================================
 
+\section{Influence of VTW}
+\label{influence-factors-vtw-chapter}
+
+Table \ref{influence-factors-vtw-table} lists the principle features raised throughout the experience of designing, developing and testing the VTW platform, which influenced the subsequent creation of the Mirrorshades parallel reality platform (chapter \ref{chapter-mirrorshades}).
+
+\begin{table}[h]
+\begin{center}
+\begin{tabularx}{\textwidth}{l *{2}{>{\centering\arraybackslash}X}}
+
+\toprule
+
+\textbf{Factor} & \textbf{Observation} \\
+
+\midrule
+
+%=========================================================================================================
+		
+Framerate & Should be higher, through use of more powerful hardware \&/or more suitable software environment. \\
+
+\midrule
+
+%=========================================================================================================
+
+Position Control & Should be more accurate to fully realise scenarios 2 and 3, and must be substantially more accurate for an indoor application. \\
+
+\midrule
+
+%=========================================================================================================
+
+Orientation Control & Should be faster and more responsive, through use of orientation sensors with higher update frequency. \\
+
+\midrule
+
+%=========================================================================================================
+
+User Experience & Should use a different display methodology to fully realise the vision of switching wholly between environments, rather than mixing a small window of the virtual environment into the surrounding real environment. \\
+
+%=========================================================================================================
+\bottomrule
+\end{tabularx}
+\end{center}
+\caption{Factors raised by VTW that influenced the Mirrorshades platform.}
+\label{influence-factors-vtw-table}
+\end{table}
+
+%=========================================================================================================
+
 \section{Summary}
 
 This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was a preliminary foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. VTW assessed via real world application the suitability of an interface in the style of previous sitsim projects to serve as a platform for investigation into parallel reality experience. This real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a level of freeform exploration wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the concept of parallel reality envisioned. The lessons learned from the VTW project were used to inform the design and development of the subsequent Mirrorshades platform.
