--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -726,7 +726,7 @@ Both with previous sitsim projects and VTW the user's view is arguably always a 
 \section{Influence of VTW}
 \label{influence-factors-vtw-chapter}
 
-Table \ref{influence-factors-vtw-table} lists the principle features raised throughout the experience of designing, developing and testing the VTW platform, which influenced the subsequent creation of the Mirrorshades parallel reality platform (chapter \ref{chapter-mirrorshades}).
+Table \ref{influence-factors-vtw-table} lists the principle factors raised throughout the experience of designing, developing and testing the VTW platform, which influenced the subsequent creation of the Mirrorshades parallel reality platform (chapter \ref{chapter-mirrorshades}).
 
 \begin{table}[h]
 \begin{center}
