--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -30,6 +30,53 @@ To continue the investigation of parallel reality, once again using cultural her
 
 %=========================================================================================================
 
+%***floob
+
+Table \ref{influence-factors-mirrorshades-table} outlines how the factors highlighted from the VTW platform, in table \ref{influence-factors-vtw-table} in section \ref{influence-factors-vtw-chapter}, were addressed for the Mirrorshades platform.
+
+\begin{table}[h]
+\begin{center}
+\begin{tabularx}{\textwidth}{l *{2}{>{\centering\arraybackslash}X}}
+
+\toprule
+
+\textbf{Factor} & \textbf{Observation} \\
+
+\midrule
+
+%=========================================================================================================
+		
+Framerate & Is higher, through the use of substantially more powerful hardware (gaming laptop computer) and better optimised software environment (Unity). \\
+
+\midrule
+
+%=========================================================================================================
+
+Position Control & Is more accurate and is suitable for indoor uses, through adoption of IndoorAtlas technology. \\
+
+\midrule
+
+%=========================================================================================================
+
+Orientation Control & Is faster and more responsive, through use of the 1kHz tracker in the Oculus Rift DK1. \\
+
+\midrule
+
+%=========================================================================================================
+
+User Experience & Fully realises the vision of switching wholly between environments, by using a wide FoV VR HMD that completely fills the user's vision with the graphical output of the platform. \\
+
+%=========================================================================================================
+\bottomrule
+\end{tabularx}
+\end{center}
+\caption{How the factors raised by VTW influenced the Mirrorshades platform.}
+\label{influence-factors-mirrorshades-table}
+\end{table}
+
+
+%=========================================================================================================
+
 \section{The Mirrorshades Platform}
 \label{the-mirrorshades-platform}
 Figure \ref{systemarchitecture} presents a high level architectural overview of the Mirrorshades\footnote{\textbf{Mirrorshades: The Cyberpunk Anthology} (1986) is a defining cyberpunk short story collection edited by Bruce Sterling, who explains how mirrored sunglasses became a literary badge or `totem' for the cyberpunk movement whose fiction has frequently involved immersive multi-user virtual environments and HMDs.} parallel reality platform while figure \ref{participant-f-5.jpg} shows its implementation. Mirrorshades allows its user to observe and move around their real environment (RW) whilst wearing a stereoscopic 3D HMD, with their position and gaze tracked by an IPS and the HMD's head tracker, freely switching between viewing RW visual stimuli provided by cameras mounted to the HMD and immersive VR visual stimuli from the equivalent vantage point into a virtual environment as tracked by the IPS. A controller held by the user is used to control these switches between RW and VR. The mobile client that produces the graphical content delivered to the HMD is carried about the person in a bag/satchel.
